--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-jshint": "^1.9.0",
     "gulp-ruby-sass": "^1.0.5",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-webserver": "^0.9.1"
+    "gulp-webserver": "^0.9.1",
+    "normalize.css": "^8.0.0"
   }
 }
